@@ -36,8 +36,9 @@ Small features:
     the tool starpu_perfmodel_display
   * New batch files to execute StarPU applications under Microsoft
     Visual Studio (They are installed in path_to_starpu/bin/mvsc)/
-  * Add cl_arg_free field to enable automatic free(cl_arg) on task
-    destroy.
+  * Add cl_arg_free, callback_arg_free, prologue_callback_arg_free fields to
+    enable automatic free(cl_arg); free(callback_arg);
+    free(prologue_callback_arg) on task destroy.
 
 Changes:
   * Modification of perfmodels output format for future improvements.
